--- a/byme.html
+++ b/byme.html
@@ -79,7 +79,7 @@
     </div>
   </div>
   <div>
-    <img src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/byme_video_cover.png">
+    <img class="w-full" src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/byme_video_cover.png">
   </div>
 
   <!--preface-->
@@ -102,7 +102,7 @@
       <br>匹配流程完成率：成功匹配并接通的用户数/启动匹配流程的总用户数*100%（一日内）
     </p>
   </div>
-  <img src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/byme_video_content_1.png">
+  <img class="w-full" src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/byme_video_content_1.png">
   <!--Research Plan-->
   <div class="px-[96px] pt-[176px] pb-[88px]">
     <p class="text-black/50 PF-sm text-[32px] mb-[24px]">Research Plan</p>
@@ -110,7 +110,7 @@
       了解需求背景后，我们制定了一个为期5天的计划，包括用户研究（3天）及方案产出（2天）。下图展示了详细的研究框架，包括问卷法、访谈法、数据分析和体验指标制定等。
     </p>
   </div>
-  <img src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/byme_video_content_2.png">
+  <img class="w-full" src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/byme_video_content_2.png">
   <!--Questionnaire-->
   <div class="px-[96px] pt-[176px] pb-[88px]">
     <p class="text-black/50 PF-sm text-[32px] mb-[24px]">Questionnaire</p>
@@ -121,7 +121,7 @@
       起初，根据数据结果，我们认为耗时长是核心痛点。但与PM沟通后发现，由于平台处于初期，主播数量不足，因此匹配时间长的问题无法避免。如果强行缩短，用户可能匹配到劣质对象，影响留存。权衡后，我们决定将“算法效率”这一不可控项，转化为“感知效率”这一可控设计命题。
     </p>
   </div>
-  <img src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/byme_video_content_3.png">
+  <img class="w-full" src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/byme_video_content_3.png">
   <!--Interview-->
   <div class="px-[96px] pt-[176px] pb-[88px]">
     <p class="text-black/50 PF-sm text-[32px] mb-[24px]">Interview</p>
@@ -131,7 +131,7 @@
         class="text-black/20">（等待期间无互动、无法后台挂起）。</a>
     </p>
   </div>
-  <img src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/byme_video_content_4.png">
+  <img class="w-full" src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/byme_video_content_4.png">
   <!--Game-->
   <div class="px-[96px] pt-[176px] pb-[88px]">
     <p class="text-black/50 PF-sm text-[32px] mb-[24px]">Game</p>
@@ -139,7 +139,7 @@
       基于上述矛盾，设计、产品、技术团队围绕解决方案进行了三次博弈。您可以在下面查看要点，以了解我们如何克服团队协作的挑战：
     </p>
   </div>
-  <img src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/byme_video_content_5.png">
+  <img class="w-full" src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/byme_video_content_5.png">
   <!--1st Design Iteration-->
   <div class="px-[96px] pt-[176px] pb-[88px]" id="finaldesign">
     <p class="text-black/50 PF-sm text-[32px] mb-[24px]">1st Design Iteration</p>
@@ -147,7 +147,7 @@
       根据博弈结果，我们形成了初版的解决方案。接下来，您将首先了解该方案的UX/UI设计如何回应前述的三项挑战，之后可查看实际动效演示。
     </p>
   </div>
-  <img src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/byme_video_content_6.png">
+  <img class="w-full" src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/byme_video_content_6.png">
   <video class="w-full h-auto" autoplay loop muted playsinline style="mix-blend-mode: darken;">
     <source src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/byme_video_pro.webm">
   </video>
@@ -158,7 +158,7 @@
       经过设计评审，我们将第二次迭代的重心设置为流程、状态的补全和UI细节的调整。例如，我们优化了匹配取消页、视频通话页、视频结束页的UI设计，以使整体的视觉风格更一致、精致。
     </p>
   </div>
-  <img src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/byme_video_content_7.png">
+  <img class="w-full" src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/byme_video_content_7.png">
   <!--User Experience Metrics-->
   <div class="px-[96px] pt-[176px] pb-[88px]">
     <p class="text-black/50 PF-sm text-[32px] mb-[24px]">Game</p>
@@ -166,7 +166,7 @@
       最后，我们根据Google GSM模型，制定了相应的体验指标，并与产品、开发合作设置埋点，用于验证设计效果。下面是具体的执行过程，包括最终的数据效果。
     </p>
   </div>
-  <img src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/byme_video_content_8.png">
+  <img class="w-full" src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/byme_video_content_8.png">
   <!--Future Design Iteration-->
   <div class="px-[96px] pt-[176px] pb-[88px]">
     <p class="text-black/50 PF-sm text-[32px] mb-[24px]">Game</p>
@@ -180,31 +180,31 @@
   <div class="bg-[#F5F7FA] px-[96px] pt-[88px]">
     <div class="flex">
       <div data-image="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/01_2.png"
-        class="openModal mr-[24px] mb-[24px] hover:cursor-pointer transition-all duration-500 ease-in-out transform hover:scale-[1.01] hover:drop-shadow-[0_35px_35px_rgba(0,0,0,0.1)]">
-        <img src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/card_01.png">
+        class="w-full h-auto openModal mr-[24px] mb-[24px] hover:cursor-pointer transition-all duration-500 ease-in-out transform hover:scale-[1.01] hover:drop-shadow-[0_35px_35px_rgba(0,0,0,0.1)]">
+        <img class="w-full" src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/card_01.png">
       </div>
       <div data-image="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/03.png"
-        class="openModal mb-[24px] hover:cursor-pointer transition-all duration-500 ease-in-out transform hover:scale-[1.01] hover:drop-shadow-[0_35px_35px_rgba(0,0,0,0.1)]">
-        <img src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/card_03.png">
+        class="w-full h-auto openModal mb-[24px] hover:cursor-pointer transition-all duration-500 ease-in-out transform hover:scale-[1.01] hover:drop-shadow-[0_35px_35px_rgba(0,0,0,0.1)]">
+        <img class="w-full" src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/card_03.png">
       </div>
       <div data-image="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/04_2.png"
-        class="openModal ml-[24px] mb-[24px] hover:cursor-pointer transition-all duration-500 ease-in-out transform hover:scale-[1.01] hover:drop-shadow-[0_35px_35px_rgba(0,0,0,0.1)]">
-        <img src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/card_04.png">
+        class="w-full h-auto openModal ml-[24px] mb-[24px] hover:cursor-pointer transition-all duration-500 ease-in-out transform hover:scale-[1.01] hover:drop-shadow-[0_35px_35px_rgba(0,0,0,0.1)]">
+        <img class="w-full" src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/card_04.png">
       </div>
     </div>
 
     <div class="flex">
       <div data-image="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/06.png"
-        class="openModal mr-[24px] mb-[24px] hover:cursor-pointer transition-all duration-500 ease-in-out transform hover:scale-[1.01] hover:drop-shadow-[0_35px_35px_rgba(0,0,0,0.1)]">
-        <img src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/cardB_01.png">
+        class="w-full h-auto openModal mr-[24px] mb-[24px] hover:cursor-pointer transition-all duration-500 ease-in-out transform hover:scale-[1.01] hover:drop-shadow-[0_35px_35px_rgba(0,0,0,0.1)]">
+        <img class="w-full" src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/cardB_01.png">
       </div>
       <div data-image="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/05.png"
-        class="openModal mr-[24px] mb-[24px] hover:cursor-pointer transition-all duration-500 ease-in-out transform hover:scale-[1.01] hover:drop-shadow-[0_35px_35px_rgba(0,0,0,0.1)]">
-        <img src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/card_05.png">
+        class="w-full h-auto openModal mr-[24px] mb-[24px] hover:cursor-pointer transition-all duration-500 ease-in-out transform hover:scale-[1.01] hover:drop-shadow-[0_35px_35px_rgba(0,0,0,0.1)]">
+        <img class="w-full" src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/card_05.png">
       </div>
       <div data-image="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/11.png"
-        class="openModal mb-[24px] hover:cursor-pointer transition-all duration-500 ease-in-out transform hover:scale-[1.01] hover:drop-shadow-[0_35px_35px_rgba(0,0,0,0.1)]">
-        <img src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/card_06.png">
+        class="w-full h-auto openModal mb-[24px] hover:cursor-pointer transition-all duration-500 ease-in-out transform hover:scale-[1.01] hover:drop-shadow-[0_35px_35px_rgba(0,0,0,0.1)]">
+        <img class="w-full" src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/card_06.png">
       </div>
     </div>
   </div>
@@ -212,16 +212,16 @@
   <div class=" bg-[#F5F7FA] px-[96px]">
     <div class="flex">
       <div data-image="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/07.png"
-        class="openModal mr-[24px] mb-[24px] hover:cursor-pointer transition-all duration-500 ease-in-out transform hover:scale-[1.01] hover:drop-shadow-[0_35px_35px_rgba(0,0,0,0.1)]">
-        <img src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/cardB_02.png">
+        class="w-full h-auto openModal mr-[24px] mb-[24px] hover:cursor-pointer transition-all duration-500 ease-in-out transform hover:scale-[1.01] hover:drop-shadow-[0_35px_35px_rgba(0,0,0,0.1)]">
+        <img class="w-full" src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/cardB_02.png">
       </div>
       <div data-image="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/08.png"
-        class="openModal mb-[24px] hover:cursor-pointer transition-all duration-500 ease-in-out transform hover:scale-[1.01] hover:drop-shadow-[0_35px_35px_rgba(0,0,0,0.1)]">
-        <img src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/cardB_03.png">
+        class="w-full h-auto openModal mb-[24px] hover:cursor-pointer transition-all duration-500 ease-in-out transform hover:scale-[1.01] hover:drop-shadow-[0_35px_35px_rgba(0,0,0,0.1)]">
+        <img class="w-full" src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/cardB_03.png">
       </div>
       <div data-image="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/10_change.png"
-        class="openModal ml-[24px] mb-[96px] hover:cursor-pointer transition-all duration-500 ease-in-out transform hover:scale-[1.01] hover:drop-shadow-[0_35px_35px_rgba(0,0,0,0.1)]">
-        <img src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/cardB_05.png">
+        class="w-full h-auto openModal ml-[24px] mb-[96px] hover:cursor-pointer transition-all duration-500 ease-in-out transform hover:scale-[1.01] hover:drop-shadow-[0_35px_35px_rgba(0,0,0,0.1)]">
+        <img class="w-full" src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/cardB_05.png">
       </div>
     </div>
   </div>
