--- a/qume.html
+++ b/qume.html
@@ -59,7 +59,7 @@
         </div>
     </div>
     <div>
-        <img src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/qume_qume_cover.png">
+        <img class="w-full" src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/qume_qume_cover.png">
     </div>
 
     <!-- 导航 -->
@@ -85,16 +85,16 @@
     <div class="bg-[#000000] px-[96px]">
         <div class="flex">
             <div data-image="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/qume_content_1.png"
-                class="openModal mr-[24px] mb-[24px] hover:cursor-pointer transition-all duration-500 ease-in-out transform hover:scale-[1.01] hover:drop-shadow-[0_0_35px_rgba(50,50,50,1)]">
-                <img src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/qume_card_1.png">
+                class="w-full openModal mr-[24px] mb-[24px] hover:cursor-pointer transition-all duration-500 ease-in-out transform hover:scale-[1.01] hover:drop-shadow-[0_0_35px_rgba(50,50,50,1)]">
+                <img class="w-full" src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/qume_card_1.png">
             </div>
             <div data-image="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/qume_content_2.png"
-                class="openModal mr-[24px] mb-[24px] hover:cursor-pointer transition-all duration-500 ease-in-out transform hover:scale-[1.01] hover:drop-shadow-[0_0_35px_rgba(50,50,50,1)]">
-                <img src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/qume_card_2.png">
+                class="w-full openModal mr-[24px] mb-[24px] hover:cursor-pointer transition-all duration-500 ease-in-out transform hover:scale-[1.01] hover:drop-shadow-[0_0_35px_rgba(50,50,50,1)]">
+                <img class="w-full" src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/qume_card_2.png">
             </div>
             <div data-image="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/qume_content_3.png"
-                class="openModal mb-[24px] hover:cursor-pointer transition-all duration-500 ease-in-out transform hover:scale-[1.01] hover:drop-shadow-[0_0_35px_rgba(50,50,50,1)]">
-                <img src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/qume_card_3.png">
+                class="w-full openModal mb-[24px] hover:cursor-pointer transition-all duration-500 ease-in-out transform hover:scale-[1.01] hover:drop-shadow-[0_0_35px_rgba(50,50,50,1)]">
+                <img class="w-full" src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/qume_card_3.png">
             </div>
         </div>
     </div>
@@ -107,16 +107,16 @@
     <div class="bg-[#000000] px-[96px]">
         <div class="flex">
             <div data-image="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/qume_content_4.png"
-                class="openModal mr-[24px] mb-[24px] hover:cursor-pointer transition-all duration-500 ease-in-out transform hover:scale-[1.01] hover:drop-shadow-[0_0_35px_rgba(50,50,50,1)]">
-                <img src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/qume_card_4.png">
+                class="w-full openModal mr-[24px] mb-[24px] hover:cursor-pointer transition-all duration-500 ease-in-out transform hover:scale-[1.01] hover:drop-shadow-[0_0_35px_rgba(50,50,50,1)]">
+                <img class="w-full" src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/qume_card_4.png">
             </div>
             <div data-image="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/qume_content_5.png"
-                class="openModal mr-[24px] mb-[24px] hover:cursor-pointer transition-all duration-500 ease-in-out transform hover:scale-[1.01] hover:drop-shadow-[0_0_35px_rgba(50,50,50,1)]">
-                <img src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/qume_card_5.png">
+                class="w-full openModal mr-[24px] mb-[24px] hover:cursor-pointer transition-all duration-500 ease-in-out transform hover:scale-[1.01] hover:drop-shadow-[0_0_35px_rgba(50,50,50,1)]">
+                <img class="w-full" src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/qume_card_5.png">
             </div>
             <div data-image="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/qume_content_6.png"
-                class="openModal mb-[24px] hover:cursor-pointer transition-all duration-500 ease-in-out transform hover:scale-[1.01] hover:drop-shadow-[0_0_35px_rgba(50,50,50,1)]">
-                <img src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/qume_card_6.png">
+                class="w-full openModal mb-[24px] hover:cursor-pointer transition-all duration-500 ease-in-out transform hover:scale-[1.01] hover:drop-shadow-[0_0_35px_rgba(50,50,50,1)]">
+                <img class="w-full" src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/qume_card_6.png">
             </div>
         </div>
     </div>
