--- a/about.html
+++ b/about.html
@@ -52,26 +52,23 @@
             <p class="text-[80px] PF-sm text-black pl-[24px]">Hello, I'm Zack.</p>
         </div>
         <div>
-            <p class="text-[40px] PF-sm animate__animated animate__fadeInRight text-end">I am a UX/UI designer.<br>
-                Currently studying at PolyU.</p>
+            <p class="text-[40px] PF-sm animate__animated animate__fadeInRight text-end">我是一名产品体验设计师，<br>
+                现就读于香港理工大学。</p>
         </div>
     </div>
     <!-- Overview -->
     <div class="flex bg-white justify-between space-x-[160px] px-[96px] mb-[96px] animate__animated animate__fadeIn">
         <div>
             <p class="text-[32px] PF-sm">Past</p>
-            <p class="pt-[24px] text-[24px] PF-r text-black/60">UX/UI Designer at Guangzhou Meiyue Information
-                Technology Co.</p>
+            <p class="pt-[24px] text-[24px] PF-r text-black/60">UX/UI设计师，就职于迈越。</p>
         </div>
         <div>
             <p class="text-[32px] PF-sm">Current</p>
-            <p class="pt-[24px] text-[24px] PF-r text-black/60">Independent developer and UX/UI designer for the “日语易记”
-                project.</p>
+            <p class="pt-[24px] text-[24px] PF-r text-black/60">产品体验设计实习生，就职于微信。</p>
         </div>
         <div>
             <p class="text-[32px] PF-sm">Soon</p>
-            <p class="pt-[24px] text-[24px] PF-r text-black/60">The Hong Kong Polytechnic University Master of Design in
-                Intelligent Systems Design (ISD).</p>
+            <p class="pt-[24px] text-[24px] PF-r text-black/60">智能系统设计硕士，就读于香港理工大学。</p>
         </div>
     </div>
 
