--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   <div>
     <div class="z-0 animate__animated animate__fadeIn ">
       <video class="w-screen" autoplay loop muted playsinline style="mix-blend-mode: darken;">
-        <source src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/homepage_bg.webm">
+        <source src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/new_bg.webm">
       </video>
     </div>
 
@@ -74,10 +74,24 @@
   <!-- Works Section -->
   <div class="hidden-below-sm">
     <section id="works" class="flex bg-[#F5FAFD]">
-      <!-- byme -->
+      <!-- 微信小店 -->
       <div class="w-1/2 h-auto">
         <div
           class="bg-[#F5FAFD] pt-[12px] pb-[6px] pl-[12px] pr-[6px] relative ease-in-out transform duration-300 transition-all">
+          <a href="weixin.html" target="_blank">
+            <img class="w-full h-auto rounded-[48px] hover:brightness-110 ease-in-out duration-300"
+              src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/cover_weixin.png">
+          </a>
+          <div class="absolute top-[40px] left-[40px] text-[28px] flex justify-normal space-x-[8px]">
+            <img src="media/logo_weixin.png">
+            <p class="PF-sm">Locked</p>
+          </div>
+        </div>
+      </div>
+      <!-- byme -->
+      <div class="w-1/2 h-auto">
+        <div
+          class="bg-[#F5FAFD] pt-[12px] pb-[6px] pl-[6px] pr-[12px] relative ease-in-out transform duration-300 transition-all">
           <a href="byme.html" target="_blank">
             <img class="w-full h-auto rounded-[48px] hover:brightness-110 ease-in-out duration-300"
               src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/cover_byme.png">
@@ -88,10 +102,12 @@
           </div>
         </div>
       </div>
+    </section>
+    <section class="flex bg-[#F5FAFD]">
       <!-- quin -->
       <div class="w-1/2 h-auto cursor-not-allowed">
         <div
-          class="bg-[#F5FAFD] pt-[12px] pb-[6px] pl-[6px] pr-[12px] relative ease-in-out transform duration-300 transition-all">
+          class="bg-[#F5FAFD] pt-[12px] pb-[6px] pl-[12px] pr-[6px] relative ease-in-out transform duration-300 transition-all">
           <a href="https://medium.com/@alstonchvita/因爲糟糕的用戶體驗-我重新設計了這款ai占卜產品-quin-cac9bf025dd4" target="_blank">
             <img class="w-full h-auto rounded-[48px] hover:brightness-110 ease-in-out duration-300"
               src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/quin_cover.png">
@@ -104,12 +120,10 @@
           </div>
         </div>
       </div>
-    </section>
-    <section class="flex bg-[#F5FAFD]">
       <!-- Midea -->
       <div class="w-1/2 h-auto">
         <div
-          class="bg-[#F5FAFD] pt-[6px] pb-[12px] pl-[12px] pr-[6px] relative ease-in-out transform duration-300 transition-all">
+          class="bg-[#F5FAFD] pt-[12px] pb-[6px] pl-[6px] pr-[12px] relative ease-in-out transform duration-300 transition-all">
           <a href="super.html" target="_blank">
             <img class="w-full h-auto rounded-[48px] hover:brightness-125 ease-in-out duration-300"
               src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/cover_super.png">
@@ -117,20 +131,6 @@
           <div class="absolute top-[40px] left-[40px] text-[28px] flex justify-normal space-x-[8px]">
             <img src="media/logo_midea.png">
             <p class="text-white PF-sm">美的 · SUPER UX Model</p>
-          </div>
-        </div>
-      </div>
-      <!-- Xmind -->
-      <div class="w-1/2 h-auto">
-        <div
-          class="bg-[#F5FAFD] pt-[6px] pb-[6px] pl-[6px] pr-[12px] relative ease-in-out transform duration-300 transition-all">
-          <a href="xmind.html" target="_blank">
-            <img class="w-full h-auto rounded-[48px] hover:brightness-110 ease-in-out duration-300"
-              src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/cover_card_Xmind.png">
-          </a>
-          <div class="absolute top-[40px] left-[40px] text-[28px] flex justify-normal space-x-[8px]">
-            <img src="media/xmind/xmind_logo_44.png">
-            <p class="text-black PF-sm">Xmind·AI 概念设计</p>
           </div>
         </div>
       </div>
@@ -150,21 +150,20 @@
           </div>
         </div>
       </div>
-      <!-- gafalib -->
+      <!-- Xmind -->
       <div class="w-1/2 h-auto">
         <div
           class="bg-[#F5FAFD] pt-[6px] pb-[6px] pl-[6px] pr-[12px] relative ease-in-out transform duration-300 transition-all">
-          <a href="gafalib.html" target="_blank">
+          <a href="xmind.html" target="_blank">
             <img class="w-full h-auto rounded-[48px] hover:brightness-110 ease-in-out duration-300"
-              src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/cover_gafalib.png">
+              src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/cover_card_Xmind.png">
           </a>
           <div class="absolute top-[40px] left-[40px] text-[28px] flex justify-normal space-x-[8px]">
-            <img src="media/logo_gafa.png">
-            <p class="text-black PF-sm">GAFALib</p>
+            <img src="media/xmind/xmind_logo_44.png">
+            <p class="text-black PF-sm">Xmind·AI 概念设计</p>
           </div>
         </div>
       </div>
-    </section>
   </div>
 
   <!-- More -->
